# pirogramming-18th-django

./: README.md  flake.nix  pyproject.toml
server/apps/posts/: admin.py  apps.py  models.py  urls.py  views.py
server/apps/posts/migrations/: 0001_initial.py
server/apps/posts/templates/posts/: create.html  detail.html  list.html  update.html
server/config/: settings.py  urls.py
