[tool.poetry]
name = "pirogramming-18th-django"
version = "0.1.0"
description = "피로그래밍 18기 Django Playground"
authors = ["sudosubin <sudosubin@gmail.com>"]
license = "UNLICENSED"
readme = "README.md"
packages = [{include = "server"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"

[tool.poetry.group.dev.dependencies]
autohooks = "^22.11.2"
autohooks-plugin-black = "^22.11.0"
autohooks-plugin-flake8 = {url = "https://github.com/greenbone/autohooks-plugin-flake8/archive/refs/tags/v22.8.0.tar.gz"}
autohooks-plugin-isort = "^22.8.0"
black = "^22.12.0"
bpython = "^0.23"
flake8 = "^5.0.1"
flake8-pyproject = "^1.2.2"
isort = "^5.11.4"

[tool.autohooks]
mode = "poetry"
pre-commit = ["autohooks.plugins.black", "autohooks.plugins.flake8", "autohooks.plugins.isort"]

[tool.black]
target-version = ["py310"]
exclude = '''
(
    \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)
'''

[tool.flake8]
max-line-length = 88
max-complexity = 12

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
